--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="title_activity_posts">PostsActivity</string>
     <string name="title_activity_friends">FriendsActivity</string>
     <string name="title_activity_profile">ProfileActivity</string>
+    <string name="title_activity_settings">Settings</string>
     <string name="title_activity_spotify_connect">SpotifyConnectActivity</string>
     <string name="title_activity_spotify_web_view">SpotifyWebViewActivity</string>
 </resources>
